# pong

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build
build-aux/: com.github.witalijbukatkin.Pong.yml  pong.desktop  resources_flatpak.patch  windows_bundler.ps1
include/: diagnostics.h  game.h  pong.h
include/util/: common.h  events.h  loader.h  render.h
package/: create-package.sh  pong.desktop
package/DEBIAN/: changelog  control  copyright  postinst
src/: common.h  diagnostics.c  diagnostics.h  events.c  events.h  game.c  game.h  loader.c  pong.c  pong.h  render.c  support.c  support.h
src/util/: common.c  events.c  loader.c  render.c
subprojects/: libpng.wrap  zlib.wrap
